--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "idb": "^2.1.1",
     "path": "^0.12.7"
   },
@@ -30,7 +32,6 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-order": "^1.1.1",
     "gulp-rename": "^1.2.2",
-    
     "gulp-uglify": "^3.0.0",
     "nodemon": "^1.17.2"
   },
